--- a/index.html
+++ b/index.html
@@ -1,11 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alphabet-clash-pro</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.1/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    
+
+<body class="font-poppins">
+
+
+    <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center">
+        <section id="section-1" class="text-white text-center flex justify-center items-center min-h-screen">
+            <div class=" items-center flex flex-col gap-8">
+                <h1 class="text-8xl font-bold">ALPHABET CLASH</h1>
+                <p>Unleash your Keyboard Kun g Fu : Press "Enter" to play</p>
+                <button onclick="play()" class="btn bg-white text-black">Play Now</button>
+            </div>
+        </section>
+        <section id="section-2" class="part-2 hidden">
+            <div class="flex flex-col items-center gap-20 pt-20">
+                <div
+                    class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#ffffffB3]">
+                    <div class="flex justify-center">
+                        <p class="bg-[#2F2941] px-6 py-3 rounded-b-2xl">Don't watch keyboard while playing...</p>
+                    </div>
+                    <div class="flex justify-center h-full items-center">
+                        <p class="text-black text-9xl font-bold">Y</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">q</kbd>
+                        <kbd class="kbd">w</kbd>
+                        <kbd class="kbd">e</kbd>
+                        <kbd class="kbd">r</kbd>
+                        <kbd class="kbd">t</kbd>
+                        <kbd class="kbd">y</kbd>
+                        <kbd class="kbd">u</kbd>
+                        <kbd class="kbd">i</kbd>
+                        <kbd class="kbd">o</kbd>
+                        <kbd class="kbd">p</kbd>
+                    </div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">a</kbd>
+                        <kbd class="kbd">s</kbd>
+                        <kbd class="kbd">d</kbd>
+                        <kbd class="kbd">f</kbd>
+                        <kbd class="kbd">g</kbd>
+                        <kbd class="kbd">h</kbd>
+                        <kbd class="kbd">j</kbd>
+                        <kbd class="kbd">k</kbd>
+                        <kbd class="kbd">l</kbd>
+                    </div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">z</kbd>
+                        <kbd class="kbd">x</kbd>
+                        <kbd class="kbd">c</kbd>
+                        <kbd class="kbd">v</kbd>
+                        <kbd class="kbd">b</kbd>
+                        <kbd class="kbd">n</kbd>
+                        <kbd class="kbd">m</kbd>
+                        <kbd class="kbd">/</kbd>
+                    </div>
+                </div>
+                <div class="flex justify-between w-3/4">
+                    <button class="btn bg-indigo-700 rounded-full">
+                        Life
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+                      </button>
+                      <button class="btn bg-blue-800 rounded-full">
+                        Score
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+                      </button>
+                </div>
+
+            </div>
+        </section>
+
+
+        <section id="section-3" class="part-3 flex justify-center items-center min-h-screen hidden">
+           <div class="text-white text-center space-y-6 bg-[#ffffff33] p-8 rounded-lg">
+            <h1 class="text-8xl "> <span class="font-extrabold">Score:</span> <span>14</span></h1>
+            <button class=" bg-white text-black p-4 rounded-2xl text-2xl font-semibold ">Play Again</button>
+            <p>Practice will make you pro</p>
+           </div>
+        </section>
+    </main>
+
+
+
+
+
+
+    <script src="js/alpha.js"></script>
 </body>
+
 </html>
